[package]
name = "evaRust"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT"
authors = ["Gaurav Sablok <gsablok@ibch.poznan.pl>"]
description = "vcfilter for human genomics"
homepage = "https://github.com/genomicssport/evaRust"
repository = "https://github.com/genomicssport/evaRust"

[dependencies]
async-std = "1.13.1"
clap = { version = "4.5.41", features = ["derive"] }
eframe = "0.32.0"
egui = "0.32.0"
figlet-rs = "0.1.5"
tokio = { version = "1.47.1", features = ["full"] }
